styled blog page

--- a/client/src/pages/blog/Blog.css
+++ b/client/src/pages/blog/Blog.css
@@ -1,4 +1,12 @@
 
+
 .blog-title{
-    
+    text-align: left;
+}
+.blog-article{
+    text-align: left;
+}
+.blog-recent-posts{
+    padding-left: 20px;
+    text-align: left;
 }
