--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
     /* padding-top: 100px; */
     padding-top: 150px;
     padding-left: 75px;
+    padding-right: 75px;
     padding-bottom: 100px;
     /* padding-bottom: 200px; */
     text-align: center;
