--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,3 +1,5 @@
+
+
 footer {
     /* bottom: 0; */
     position: relative;
@@ -5,6 +7,8 @@ footer {
     height: "auto";
     padding: 20px 50px 20px 160px;
     border-top: rgb(194, 185, 185) 2px solid;
+    background: var(--background);
+    z-index: 998;
 }
 
 .footer-link{
