--- a/client/src/components/card/Card.css
+++ b/client/src/components/card/Card.css
@@ -8,7 +8,7 @@
 .card-container {
    position: relative;
    /* width: 1000px; */
-   width: 600px;
+   width: 400px;
    display: flex;
    /* justify-content: space-between; */
    flex-wrap: wrap;
@@ -19,7 +19,8 @@
 }
 .card-container .card-home {
     position: relative;
-    height: 250px;
+    /* height: 250px; */
+    height: 150px;
     background: #fff;
     display: flex;
     width: 45%;
@@ -41,8 +42,10 @@
     transition: 0.5s ease-in-out;
 }
 .card-container .card-home:hover .imgbx {
-    width: 150px;
-    height: 150px;
+    /* width: 150px;
+    height: 150px; */
+    width: 100px;
+    height: 100px;
     left: -75px;
     top: calc(50% - 75px);
     transition: 0.5s ease-in-out;
