--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -3,6 +3,59 @@
     background-color: lightseagreen;
    text-align: center;
 }
+
+.vHeader {
+    height: 100vh;
+    /* width: 100%;
+    width: 100vw; */
+    display: flex;
+    color: #fff;
+    /* overflow: hidden; */
+  }
+  .fullscreenVideoWrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* width: 100vw;
+    width: 100%; */
+    height: 100vh;
+    overflow: hidden;
+  }
+  .fullscreenVideoWrap video {
+    /* left: 50%; */
+    /* width: 100vw; */
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: relative;
+    /* transform: translate(-40%, -30%); */
+  }
+  .headerOverlay {
+    height: 100vh;
+    /* width: 100vw; */
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #225470;
+    z-index: 1;
+    opacity: 0.6;
+    /* overflow: hidden; */
+  }
+  .headerContent {
+    margin: 0 auto;
+    z-index: 2;
+    text-align: center;
+  }
+
+
 .title{
-    padding-top: 10%;
+    padding-top: 30%;
 }
+.questionLink{
+    margin-top: 500px;
+    padding-top: 10px;
+    color: wheat;
+    font-size: 1.2rem;
+}
+
