Added ScrollTop.jsx & more styling to home.jsx

--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,3 +1,11 @@
+:root {
+  --link-color: whitesmoke;
+}
+
+body{
+  /* to get rid of horizontal scrollbar  */
+  overflow-x:hidden;
+}
 .titleContainer {
     height: 40vh;
     background-color: lightseagreen;
@@ -16,19 +24,20 @@
     position: absolute;
     top: 0;
     left: 0;
-    /* width: 100vw;
-    width: 100%; */
+    width: 100vw;
+    max-width: 100%;
     height: 100vh;
     overflow: hidden;
   }
   .fullscreenVideoWrap video {
     /* left: 50%; */
-    /* width: 100vw; */
+    width: 100vw;
     width: 100%;
     height: 100vh;
     object-fit: cover;
     position: relative;
     /* transform: translate(-40%, -30%); */
+    
   }
   .headerOverlay {
     height: 100vh;
@@ -40,7 +49,7 @@
     background: #225470;
     z-index: 1;
     opacity: 0.6;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
   .headerContent {
     margin: 0 auto;
@@ -53,9 +62,36 @@
     padding-top: 30%;
 }
 .questionLink{
+  text-decoration: none;
+  position: relative;
+
     margin-top: 500px;
     padding-top: 10px;
-    color: wheat;
-    font-size: 1.2rem;
+    color: var(--link-color);
+    font-size: 1.7rem;
+}
+
+.questionLink::after{
+  content: "";
+  position: absolute;
+  left:0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--link-color);
+  
+  transform: scaleX(0);
+  transform-origin: right; 
+  transition: transform 300ms ease-in;
+
+}
+.questionLink:hover::after{
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.questionLink:hover {
+  text-decoration: none;
+  text-underline-position: unset;
+  color: var(--link-color);
 }
 
