--- a/client/src/components/navbar/NavBar.css
+++ b/client/src/components/navbar/NavBar.css
@@ -17,9 +17,11 @@
   position: fixed;
   /* Make sure it stays on top */
   z-index: 999;
-  width: 100%;
+  width: 100vw;
+  max-width: 100vw;
   height: auto;
   border-bottom: 0.5px solid rgb(194, 185, 185);
+  
 }
 .logo {
   text-align: center;
