--- a/client/src/components/navbar/NavBar.css
+++ b/client/src/components/navbar/NavBar.css
@@ -1,5 +1,10 @@
 :root {
-  --background: rgba(255, 255, 255, 0.6);
+  /* --background: rgba(255, 255, 255, 0.6); */
+  /* --background: #2c2c30; */
+  /* --background: #3f3f41; */
+  /* --background: #1a1a1b; */
+  --background: rgb(19, 14, 10);
+  --nav-text-color: whitesmoke;
 }
 
 *,
@@ -20,7 +25,7 @@
   width: 100vw;
   max-width: 100vw;
   height: auto;
-  border-bottom: 0.5px solid rgb(194, 185, 185);
+  /* border-bottom: 0.5px solid rgb(194, 185, 185); */
   
 }
 .logo {
@@ -126,7 +131,8 @@ nav .nav-li {
 }
 
 nav .li-navlink {
-  color: #69804e;
+  /* color: #69804e; */
+  color: var(--nav-text-color);
   text-decoration: none !important;
   font-size: 1.5rem;
   font-weight: 500;
@@ -135,7 +141,8 @@ nav .li-navlink {
 }
 
 nav .li-navlink:hover {
-  color: #69804e;
+  /* color: #69804e; */
+  color: var(--nav-text-color);
   font-weight: bolder;
 }
 /* nav_link:hover {
@@ -175,10 +182,7 @@ nav .li-navlink:hover {
 }
 
 @media screen and (min-width: 700px) {
-  :root {
-    --background: rgba(255, 255, 255, 1);
-  }
-
+  
   .nav-toggle-label {
     display: none;
   }
@@ -189,8 +193,6 @@ nav .li-navlink:hover {
   }
   .logo {
     align-self: left;
-  }
-  .logo {
     /* grid-column: 2 / 3; */
     grid-column: 1 / 2;
   }
@@ -235,13 +237,15 @@ nav .li-navlink:hover {
   nav .nav-li {
     margin-left: 3em;
     margin-bottom: 0;
+    padding-left: 1.2rem;
   }
   .nav-li-right {
-    margin-left: 50%;
+    margin-left: 60%;
   }
 
   nav .li-navlink {
-    color: #69804e;
+    /* color: #69804e; */
+    color: var(--nav-text-color);
     opacity: 1;
     position: relative;
     font-size: 1.3rem;
@@ -252,7 +256,8 @@ nav .li-navlink:hover {
     content: "";
     display: block;
     height: 5px;
-    background: #69804e;
+    /* background: #69804e; */
+    background: var(--nav-text-color);
     position: absolute;
     /* top: -0.75em; */
     left: 0;
